--- a/package.json
+++ b/package.json
@@ -10,11 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/bottom-tabs": "^5.1.1",
+    "@react-navigation/drawer": "^5.1.1",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera": "^3.19.0",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-qrcode-svg": "^6.0.3",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.2.0",
+    "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
