Initial Redux Flow

--- a/ios/hello_react_native/Info.plist
+++ b/ios/hello_react_native/Info.plist
@@ -73,5 +73,11 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>Your message to user when the camera is accessed for the first time</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
