Redux Thunk integration

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "modules/*": ["./src/modules/*"]
+    },
     "plugins": [
       {
         "name": "typescript-styled-plugin",
