--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.1",
     "yup": "^0.28.1"
   },
